[workspace]
resolver = "2"

members = [
    "core",
    "macros",
    "backends/common",
    "backends/riscv",
    "fuzz",
    "utils/check-runner",
    "utils/filecheck",
    "utils/not",
    "tools",
    "isasim",
    "lpl",
    "tmdl",
    "xtask",
]

[profile.bench]
debug = true
debuginfo-level = 2
lto = true
