[package]
name = "tir-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tir-macros = { path = "../macros/" }
winnow = "0.6.7"
thiserror = "1.0.60"
ariadne = "0.4.1"
strsim = "0.11.1"
linkme = "0.3.27"
