[package]
name = "tir-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.7"

[dependencies.tir-riscv]
path = "../backends/riscv/"

[dependencies.tir-core]
path = "../core/"

[[bin]]
name = "fuzz_riscv_disassembler"
path = "fuzz_targets/riscv/disassembler.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_core_op_parser"
path = "fuzz_targets/core/op_parser.rs"
test = false
doc = false
bench = false
