[package]
name = "tir-isasim"
version = "0.1.0"
edition = "2021"

[dependencies]
tir-core = { path = "../core" }
tir-backend = { path = "../backends/common/" }
tir-riscv = { path = "../backends/riscv/" }
tir-macros = { path = "../macros/" }
serde = "1.0.204"
serde_yml = "0.0.11"
clap = "4.5.9"
winnow = "0.6.18"

[[bin]]
name = "isasim"
path = "src/bin.rs"
