[package]
name = "tmdl"
version = "0.1.0"
edition = "2021"

[dependencies]
lpl = { path = "../lpl" }
clap = "4.5.9"

[[bin]]
name = "tmdlc"
path = "bin.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "lexer"
harness = false
