[package]
name = "tmdl"
version = "0.1.0"
edition = "2021"

[dependencies]
lpl = { path = "../lpl" }
clap = { version = "4.5.9", features = ["derive"] }
thiserror = "2.0"
quote = "1.0"
prettyplease = "0.2.25"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["parsing"] }

[[bin]]
name = "tmdlc"
path = "bin.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "lexer"
harness = false
