[package]
name = "tir-riscv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tir-core = { path = "../../core" }
tir-macros = { path = "../../macros" }
tir-backend = { path = "../common" }
seq-macro = "0.3.5"
winnow = "0.6.7"
