[package]
name = "tir-riscv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tir-core = { path = "../../core" }
tir-macros = { path = "../../macros" }
tir-backend = { path = "../common" }
lpl = { path = "../../lpl/" }
seq-macro = "0.3.5"
linkme = "0.3.27"
thiserror = "2.0"
