[package]
name = "check-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
toml = "0.8.12"
serde = { version = "1.0.201", features = ["derive"] }
map-ok = "1.0.0"
regex = "1.10.4"
shlex = "1.3.0"
unescaper = "0.1.4"
descape = "1.1.2"

