[package]
name = "tir-riscv-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tir-riscv]
path = ".."

[[bin]]
name = "fuzz_riscv_disassembler"
path = "fuzz_targets/fuzz_riscv_disassembler.rs"
test = false
doc = false
bench = false
